# reachy2_code_generation

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DUAL_MODE_ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  TESTING.md  TODO.md  config.py  debug_tool_discovery.py  demo_virtual_reachy.py  docker-compose.prod.yml  docker-compose.yml  launch_code_gen.py  mock_websocket.py  pyproject.toml  reachy_architecture_schematic.md  requirements-fixed.txt  requirements.backup.txt  requirements.txt  run_code_generation_ui.py  setup.py  setup.sh  setup_fresh_env.sh  start_dev.sh  test.py  test_agent.py  test_code_generator_api_tools.py  test_dependencies.py  test_enhanced_api_summary.py  test_enhanced_api_with_agent.py  test_local.sh  test_mock_agent.py  test_model_config.py  test_virtual_reachy.py  verify_docker.sh  (+2 more)
agent/: README_PROMPTS.md  __init__.py  agent_router.py  app.py  cli.py  code_evaluator.py  code_generation_agent.py  code_generation_interface.py  code_generation_pipeline.py  demo.py  langgraph_agent.py  prompt_config.py  simple_demo.py  test_generate_tools.py  test_langgraph_agent.py  tool_mapper.py  transparent_executor.py  visualize_graph.py  web_interface.py
api/: app.py  client_example.py  server.py  websocket.py
docs/: code_generation_interface.md
frontend/: Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  preview.html  tailwind.config.js  vite.config.ts
openapi/: reachy_api.yaml  websocket_api.yaml
reachy_bridge_venv/: pyvenv.cfg
tests/: __init__.py  conftest.py  (+4 more)
(+52 files in other folders)
